src/hbase/transformation/notaql/antlr4/NotaQLParser.java
// Generated from hbase/transformation/notaql/antlr4/NotaQL.g4 by ANTLR 4.5
package hbase.transformation.notaql.antlr4;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class NotaQLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, SplitFunction=12, ListSplitFunction=13, SL_COMMENT=14, 
		ARROW=15, IN=16, OUT=17, ROW=18, COL=19, VAL=20, EQ=21, NEQ=22, LT=23, 
		LTEQ=24, GT=25, GTEQ=26, AND=27, OR=28, PLUS=29, MINUS=30, MULT=31, DIV=32, 
		Int=33, Float=34, String=35, AVG=36, COUNT=37, MAX=38, MIN=39, SUM=40, 
		IMPLODE=41, ColName=42, GenFunc=43, OPTWS=44, WS=45, NL=46;
	public static final int
		RULE_notaql = 0, RULE_transformation = 1, RULE_rowSpec = 2, RULE_cellSpec = 3, 
		RULE_aggFun = 4, RULE_input = 5, RULE_outputCol = 6, RULE_vData = 7, RULE_vDataFunction = 8, 
		RULE_vDataGenericFunction = 9, RULE_splittableVData = 10, RULE_predicate = 11, 
		RULE_inRowPredicate = 12, RULE_outRowPredicate = 13, RULE_colId = 14, 
		RULE_atom = 15;
	public static final String[] ruleNames = {
		"notaql", "transformation", "rowSpec", "cellSpec", "aggFun", "input", 
		"outputCol", "vData", "vDataFunction", "vDataGenericFunction", "splittableVData", 
		"predicate", "inRowPredicate", "outRowPredicate", "colId", "atom"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "';'", "','", "'.'", "'('", "')'", "':'", "'?('", "'$('", "'@'", 
		"'COL_COUNT('", "'!'", "'split'", "'splitList'", null, "'<-'", "'IN'", 
		"'OUT'", "'_r'", "'_c'", "'_v'", "'='", "'!='", "'<'", "'<='", "'>'", 
		"'>='", "'&&'", "'||'", "'+'", "'-'", "'*'", "'/'", null, null, null, 
		"'AVG'", "'COUNT'", "'MAX'", "'MIN'", "'SUM'", "'IMPLODE'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		"SplitFunction", "ListSplitFunction", "SL_COMMENT", "ARROW", "IN", "OUT", 
		"ROW", "COL", "VAL", "EQ", "NEQ", "LT", "LTEQ", "GT", "GTEQ", "AND", "OR", 
		"PLUS", "MINUS", "MULT", "DIV", "Int", "Float", "String", "AVG", "COUNT", 
		"MAX", "MIN", "SUM", "IMPLODE", "ColName", "GenFunc", "OPTWS", "WS", "NL"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "NotaQL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public NotaQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class NotaqlContext extends ParserRuleContext {
		public TransformationContext transformation() {
			return getRuleContext(TransformationContext.class,0);
		}
		public TerminalNode EOF() { return getToken(NotaQLParser.EOF, 0); }
		public NotaqlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_notaql; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NotaQLListener ) ((NotaQLListener)listener).enterNotaql(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NotaQLListener ) ((NotaQLListener)listener).exitNotaql(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NotaQLVisitor ) return ((NotaQLVisitor<? extends T>)visitor).visitNotaql(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NotaqlContext notaql() throws RecognitionException {
		NotaqlContext _localctx = new NotaqlContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_notaql);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			transformation();
			setState(34);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(33);
				match(T__0);
				}
			}

			setState(36);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TransformationContext extends ParserRuleContext {
		public RowSpecContext rowSpec() {
			return getRuleContext(RowSpecContext.class,0);
		}
		public CellSpecContext cellSpec() {
			return getRuleContext(CellSpecContext.class,0);
		}
		public InRowPredicateContext inRowPredicate() {
			return getRuleContext(InRowPredicateContext.class,0);
		}
		public List<TerminalNode> NL() { return getTokens(NotaQLParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(NotaQLParser.NL, i);
		}
		public OutRowPredicateContext outRowPredicate() {
			return getRuleContext(OutRowPredicateContext.class,0);
		}
		public TransformationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_transformation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NotaQLListener ) ((NotaQLListener)listener).enterTransformation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NotaQLListener ) ((NotaQLListener)listener).exitTransformation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NotaQLVisitor ) return ((NotaQLVisitor<? extends T>)visitor).visitTransformation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TransformationContext transformation() throws RecognitionException {
		TransformationContext _localctx = new TransformationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_transformation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			_la = _input.LA(1);
			if (_la==IN) {
				{
				setState(38);
				inRowPredicate();
				setState(39);
				match(T__1);
				setState(43);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NL) {
					{
					{
					setState(40);
					match(NL);
					}
					}
					setState(45);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(48);
			rowSpec();
			setState(49);
			match(T__1);
			setState(53);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NL) {
				{
				{
				setState(50);
				match(NL);
				}
				}
				setState(55);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(56);
			cellSpec();
			setState(65);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(57);
				match(T__1);
				setState(61);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NL) {
					{
					{
					setState(58);
					match(NL);
					}
					}
					setState(63);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(64);
				outRowPredicate();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RowSpecContext extends ParserRuleContext {
		public TerminalNode OUT() { return getToken(NotaQLParser.OUT, 0); }
		public TerminalNode ROW() { return getToken(NotaQLParser.ROW, 0); }
		public TerminalNode ARROW() { return getToken(NotaQLParser.ARROW, 0); }
		public SplittableVDataContext splittableVData() {
			return getRuleContext(SplittableVDataContext.class,0);
		}
		public RowSpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rowSpec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NotaQLListener ) ((NotaQLListener)listener).enterRowSpec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NotaQLListener ) ((NotaQLListener)listener).exitRowSpec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NotaQLVisitor ) return ((NotaQLVisitor<? extends T>)visitor).visitRowSpec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RowSpecContext rowSpec() throws RecognitionException {
		RowSpecContext _localctx = new RowSpecContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_rowSpec);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(OUT);
			setState(68);
			match(T__2);
			setState(69);
			match(ROW);
			setState(70);
			match(ARROW);
			setState(71);
			splittableVData();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CellSpecContext extends ParserRuleContext {
		public OutputColContext outputCol() {
			return getRuleContext(OutputColContext.class,0);
		}
		public TerminalNode ARROW() { return getToken(NotaQLParser.ARROW, 0); }
		public SplittableVDataContext splittableVData() {
			return getRuleContext(SplittableVDataContext.class,0);
		}
		public AggFunContext aggFun() {
			return getRuleContext(AggFunContext.class,0);
		}
		public List<AtomContext> atom() {
			return getRuleContexts(AtomContext.class);
		}
		public AtomContext atom(int i) {
			return getRuleContext(AtomContext.class,i);
		}
		public CellSpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cellSpec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NotaQLListener ) ((NotaQLListener)listener).enterCellSpec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NotaQLListener ) ((NotaQLListener)listener).exitCellSpec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NotaQLVisitor ) return ((NotaQLVisitor<? extends T>)visitor).visitCellSpec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CellSpecContext cellSpec() throws RecognitionException {
		CellSpecContext _localctx = new CellSpecContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_cellSpec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			outputCol();
			setState(74);
			match(ARROW);
			setState(90);
			switch (_input.LA(1)) {
			case T__3:
			case T__8:
			case T__9:
			case IN:
			case Int:
			case Float:
			case String:
			case ColName:
				{
				setState(75);
				splittableVData();
				}
				break;
			case AVG:
			case COUNT:
			case MAX:
			case MIN:
			case SUM:
			case IMPLODE:
				{
				setState(76);
				aggFun();
				setState(77);
				match(T__3);
				setState(79);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__8) | (1L << T__9) | (1L << IN) | (1L << Int) | (1L << Float) | (1L << String) | (1L << ColName))) != 0)) {
					{
					setState(78);
					splittableVData();
					}
				}

				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__1) {
					{
					{
					setState(81);
					match(T__1);
					setState(82);
					atom();
					}
					}
					setState(87);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(88);
				match(T__4);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AggFunContext extends ParserRuleContext {
		public Token fun;
		public TerminalNode AVG() { return getToken(NotaQLParser.AVG, 0); }
		public TerminalNode COUNT() { return getToken(NotaQLParser.COUNT, 0); }
		public TerminalNode MAX() { return getToken(NotaQLParser.MAX, 0); }
		public TerminalNode MIN() { return getToken(NotaQLParser.MIN, 0); }
		public TerminalNode SUM() { return getToken(NotaQLParser.SUM, 0); }
		public TerminalNode IMPLODE() { return getToken(NotaQLParser.IMPLODE, 0); }
		public AggFunContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aggFun; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NotaQLListener ) ((NotaQLListener)listener).enterAggFun(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NotaQLListener ) ((NotaQLListener)listener).exitAggFun(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NotaQLVisitor ) return ((NotaQLVisitor<? extends T>)visitor).visitAggFun(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AggFunContext aggFun() throws RecognitionException {
		AggFunContext _localctx = new AggFunContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_aggFun);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			((AggFunContext)_localctx).fun = _input.LT(1);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << AVG) | (1L << COUNT) | (1L << MAX) | (1L << MIN) | (1L << SUM) | (1L << IMPLODE))) != 0)) ) {
				((AggFunContext)_localctx).fun = (Token)_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InputContext extends ParserRuleContext {
		public InputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_input; }
	 
		public InputContext() { }
		public void copyFrom(InputContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class RowInputContext extends InputContext {
		public TerminalNode IN() { return getToken(NotaQLParser.IN, 0); }
		public TerminalNode ROW() { return getToken(NotaQLParser.ROW, 0); }
		public RowInputContext(InputContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NotaQLListener ) ((NotaQLListener)listener).enterRowInput(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NotaQLListener ) ((NotaQLListener)listener).exitRowInput(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NotaQLVisitor ) return ((NotaQLVisitor<? extends T>)visitor).visitRowInput(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CellInputContext extends InputContext {
		public Token colFamilyFilter;
		public Token source;
		public TerminalNode IN() { return getToken(NotaQLParser.IN, 0); }
		public TerminalNode COL() { return getToken(NotaQLParser.COL, 0); }
		public TerminalNode VAL() { return getToken(NotaQLParser.VAL, 0); }
		public PredicateContext predicate() {
			return getRuleContext(PredicateContext.class,0);
		}
		public TerminalNode ColName() { return getToken(NotaQLParser.ColName, 0); }
		public CellInputContext(InputContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NotaQLListener ) ((NotaQLListener)listener).enterCellInput(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NotaQLListener ) ((NotaQLListener)listener).exitCellInput(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NotaQLVisitor ) return ((NotaQLVisitor<? extends T>)visitor).visitCellInput(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ColIdInputContext extends InputContext {
		public TerminalNode IN() { return getToken(NotaQLParser.IN, 0); }
		public ColIdContext colId() {
			return getRuleContext(ColIdContext.class,0);
		}
		public ColIdInputContext(InputContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NotaQLListener ) ((NotaQLListener)listener).enterColIdInput(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NotaQLListener ) ((NotaQLListener)listener).exitColIdInput(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NotaQLVisitor ) return ((NotaQLVisitor<? extends T>)visitor).visitColIdInput(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InputContext input() throws RecognitionException {
		InputContext _localctx = new InputContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_input);
		int _la;
		try {
			setState(113);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				_localctx = new RowInputContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(94);
				match(IN);
				setState(95);
				match(T__2);
				setState(96);
				match(ROW);
				}
				break;
			case 2:
				_localctx = new CellInputContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(97);
				match(IN);
				setState(98);
				match(T__2);
				setState(101);
				_la = _input.LA(1);
				if (_la==ColName) {
					{
					setState(99);
					((CellInputContext)_localctx).colFamilyFilter = match(ColName);
					setState(100);
					match(T__5);
					}
				}

				setState(103);
				((CellInputContext)_localctx).source = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==COL || _la==VAL) ) {
					((CellInputContext)_localctx).source = (Token)_errHandler.recoverInline(this);
				} else {
					consume();
				}
				setState(108);
				switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
				case 1:
					{
					setState(104);
					match(T__6);
					setState(105);
					predicate(0);
					setState(106);
					match(T__4);
					}
					break;
				}
				}
				break;
			case 3:
				_localctx = new ColIdInputContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(110);
				match(IN);
				setState(111);
				match(T__2);
				setState(112);
				colId();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OutputColContext extends ParserRuleContext {
		public OutputColContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_outputCol; }
	 
		public OutputColContext() { }
		public void copyFrom(OutputColContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ResolvedColPathContext extends OutputColContext {
		public Token colFamily;
		public TerminalNode OUT() { return getToken(NotaQLParser.OUT, 0); }
		public SplittableVDataContext splittableVData() {
			return getRuleContext(SplittableVDataContext.class,0);
		}
		public TerminalNode ColName() { return getToken(NotaQLParser.ColName, 0); }
		public ResolvedColPathContext(OutputColContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NotaQLListener ) ((NotaQLListener)listener).enterResolvedColPath(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NotaQLListener ) ((NotaQLListener)listener).exitResolvedColPath(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NotaQLVisitor ) return ((NotaQLVisitor<? extends T>)visitor).visitResolvedColPath(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ColIdColPathContext extends OutputColContext {
		public TerminalNode OUT() { return getToken(NotaQLParser.OUT, 0); }
		public ColIdContext colId() {
			return getRuleContext(ColIdContext.class,0);
		}
		public ColIdColPathContext(OutputColContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NotaQLListener ) ((NotaQLListener)listener).enterColIdColPath(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NotaQLListener ) ((NotaQLListener)listener).exitColIdColPath(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NotaQLVisitor ) return ((NotaQLVisitor<? extends T>)visitor).visitColIdColPath(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OutputColContext outputCol() throws RecognitionException {
		OutputColContext _localctx = new OutputColContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_outputCol);
		int _la;
		try {
			setState(128);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				_localctx = new ColIdColPathContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(115);
				match(OUT);
				setState(116);
				match(T__2);
				setState(117);
				colId();
				}
				break;
			case 2:
				_localctx = new ResolvedColPathContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(118);
				match(OUT);
				setState(119);
				match(T__2);
				setState(122);
				_la = _input.LA(1);
				if (_la==ColName) {
					{
					setState(120);
					((ResolvedColPathContext)_localctx).colFamily = match(ColName);
					setState(121);
					match(T__5);
					}
				}

				setState(124);
				match(T__7);
				setState(125);
				splittableVData();
				setState(126);
				match(T__4);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
